# BIPIA

./: .gitignore  LICENSE  NOTICE.md  README.md  demo.ipynb  pyproject.toml  requirements.txt  setup.py
BIPIA/: README.md  requirements.txt  setup.py
BIPIA/config/: alpaca_7b.yaml  fastchat_t5.yaml  gpt35.yaml  gpt35_wosys.yaml  gpt4.yaml  gpt4all.yaml  guanaco_7b.yaml  koala_13b.yaml  mpt_7b.yaml  oasst.yaml  rwkv.yaml  stablelm.yaml  vicuna_13b.yaml  wizard_13b.yaml
DIPIA/config/: alpaca_lora_7b.yaml  baize_7b.yaml  chatglm_6b.yaml  gpt4_wosys.yaml  guanaco_13b.yaml  guanaco_33b.yaml  koala_7b.yaml  stablevicuna.yaml  vicuna_33b.yaml  vicuna_7b.yaml
DIPIA/examples/: parameters.py  run.py
benchmark/: README.md  code_attack_test.json  code_attack_train.json  parse.py  text_attack_test.json  text_attack_train.json
benchmark/abstract/: index.json  md5.txt  process.py  test.jsonl  train.jsonl
benchmark/code/: bug.csv  crawl.py  data.jsonl  (+5 more)
config/: alpaca_13b.yaml  baize_13b.yaml  chatglm2_6b.yaml  chatglm_6b.yaml  code_llama_34b.yaml  dolly.yaml  fastchat_t5.yaml  gpt35.yaml  gpt35_wosys.yaml  gpt4.yaml  gpt4_wosys.yaml  gpt4all.yaml  guanaco_13b.yaml  guanaco_65b.yaml  guanaco_7b.yaml  koala_13b.yaml  koala_7b.yaml  llama2_13b.yaml  llama2_70b.yaml  llama2_7b.yaml  mistral_7b.yaml  mpt_33b.yaml  mpt_7b.yaml  oasst.yaml  rwkv.yaml  stablelm.yaml  vicuna_13b.yaml  vicuna_33b.yaml  vicuna_7b.yaml  wizard_13b.yaml  wizard_70b.yaml
defense/: README.md  bipia_defense.md
examples/: README.md  bipia_eval.md  collect_clean_response.py  parameters.py  rouge.py  run.py
(+179 files in other folders)
